# Solana-Burn

./: .gitignore  Anchor.toml  README.md  TOKEN_README.md  hardhat.config.js  package-lock.json  package.json  tsconfig.anchor.json
app/: page.tsx
artifacts/contracts/BurnBoostToken.sol/: BurnBoostToken.json  IERC20.dbg.json  IERC20.json
cache/: solidity-files-cache.json
components/: Analytics.tsx  SolanaBurnInterface.tsx  SolanaDashboard.tsx
contexts/: SolanaContext.tsx
contracts/: BurnBoostToken.sol
lib/: solana.ts
programs/burn-boost-token/: Cargo.toml
programs/burn-boost-token/src/: lib.rs
scripts/: burn-tokens.js  create-spl-token.js  deploy-token.js  deploy.js  token-status.js  transfer-tokens.js  verify-token.js
test/: BurnBoostToken.test.js
tests/: deploy.ts
types/: ethereum.d.ts
