[package]
name = "burn-boost-token"
version = "0.1.0"
description = "BurnBoost Token - Deflationary token with market cap boost mechanism on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "burn_boost_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"